feat: add basic otel to angular app

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -119,8 +119,10 @@
   },
   "cSpell.words": [
     "Antiforgery",
+    "ASPNETCORE",
     "esproj",
     "HSTS",
+    "Millis",
     "packagr",
     "weatherforecast",
     "webfrontend",
